project section prototyping

--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,11 +1,17 @@
 
 
-.intro-img{
-    background-color: gray;
-    height:20vw;
-    width:20vw;
+/* .intro-img{
+    --background-color: gray;
+   
     border-radius: 1000px;
     margin-right:50px;
+} */
+#avatar{
+    border-radius: 1000px;
+    margin-right:80px;
+    width:600px;
+    height:600px;
+    object-fit: cover;
 }
 .text-intro{
     width:500px;
@@ -22,7 +28,19 @@
 
 
 
+@media only screen and (max-width:1314px){
+    #introduction{
+        flex-direction: column;
+    }
 
+    #avatar{
+        margin:0;
+        margin-bottom: 70px;
+        width:400px;
+        height:400px;
+    }
+
+}
 @media only screen and (max-width:888px){
   
     #introduction{
