--- a/styles/intro.css
+++ b/styles/intro.css
@@ -8,43 +8,53 @@
 } */
 #avatar{
     border-radius: 1000px;
-    margin-right:80px;
-    width:600px;
-    height:600px;
+    /* margin-right:80px; */
+    width:650px;
+    height:650px;
     object-fit: cover;
 }
-.text-intro{
-    width:500px;
-    font-size:30px;
-}
 #intro-2{
-    font-size:50px;
+    font-size:60px;
+    color:var(--main-highlight-color);
 }
 #introduction{
     display:flex;
     justify-content: center;
     align-items: center;
 }
+.text-intro{
+    margin-bottom:60px;
+    width:500px;
+    align-self: flex-end;
+}
+
+
 
 
 
 @media only screen and (max-width:1314px){
     #introduction{
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
 
     #avatar{
         margin:0;
-        margin-bottom: 70px;
+        margin-bottom: 80px;
         width:400px;
         height:400px;
+        justify-self: center;
+    }
+
+    .text-intro{
+        align-self: center;
+        margin-bottom: 0px;
     }
 
 }
 @media only screen and (max-width:888px){
   
     #introduction{
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
     .intro-img{
         margin:0;
