--- a/styles/projects.css
+++ b/styles/projects.css
@@ -3,7 +3,7 @@
     padding:80px 0 80px 0;
 }
 #project-container{
-    width:60%;
+    width:1200px;
     height:auto;
     margin:auto;
 }
@@ -11,20 +11,28 @@
 .project-element{
     display:flex;
     justify-content: center;
-    padding:30px 0 30px 0;
+    padding:30px;
 }
 
 .project-element-reverse{
     display:flex;
     justify-content: center;
-    padding:30px 0 30px 0;
+    padding:30px;
     flex-direction: row-reverse;
 }
 
 .project-content{
-    width:50%;
+    width:55%;
     margin-left:30px;
     margin-right:30px;
+    align-self: center;
+}
+.project-description{
+    margin:15px 0 15px 0;
+    /* background-color: #747474;
+    border-radius: 5px;
+    color:white;
+    padding:15px; */
 }
 
 
@@ -33,13 +41,45 @@
 }
 
 .project-link, .project-tech-link{
-    margin:0 30px 0 0;
+    margin:0 20px 0 0;
+    width:auto;
     
 }
 .project-image{
-    width:50%;
+    width:550px;
     height:500px;
-    object-fit:cover;
+    object-fit:contain;
     margin-right:30px;
     margin-left:30px;
+}
+
+@media screen and (max-width:1248px){
+    #project-container{
+        width:auto;
+    }
+    .project-title{
+        margin-top:15px;
+
+    }
+    .project-element, .project-element-reverse{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .project-image{
+        width:400px;
+        height:400px;
+    }
+    .project-title{
+        text-align: center;
+    }
+    .project-description {
+        text-align: center;
+    }
+
+    .project-technologies,.project-links{
+        justify-content: center;
+    }
+
+
 }
