--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
   overflow-x: hidden;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 * a {
   color: inherit;
@@ -14,49 +14,135 @@
 html {
   scroll-behavior: smooth;
 }
+
+body::-webkit-scrollbar{
+  width:0.3em;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(185, 185, 185);
+  border-radius: 20px;
+  outline: none
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(119, 119, 119);
+}
+
 #navbar {
   width: 100vw;
   height: 50px;
   background: rgb(255, 255, 255);
   position: fixed;
 }
-#nav-list {
+
+#logo{
+  grid-column: 1/2;
+}
+
+.nav-list {
   display: grid;
   grid-template-columns: repeat(11, 1fr);
   grid-template-rows: 50px;
-  grid-template-areas: "navLogo  navTitle navItem1 navItem2 navItem3";
+  grid-template-areas: "navLogo  navTitle navItem1 navItem2 navItem3 navItem4";
   justify-items: center;
   align-items: center;
+}
+
+.nav-list a {
+  font-size: 30px;
+}
+
+.default-font {
+  font-size: 20px;
+}
+
+.enlarged-font {
+  font-size: 60px;
+  color:var(--main-highlight-color);
 }
 
 #logo {
   grid-area: navLogo;
 }
-#nav-main-title {
-  grid-area: navTitle;
-  grid-column: 5/8;
-}
-#nav-item1 {
-  grid-area: navItem1;
-  grid-column: 9/10;
-}
-#nav-item2 {
-  grid-area: navItem2;
-  grid-column: 10/11;
-}
-#nav-item3 {
-  grid-area: navItem3;
-  grid-column: 11/12;
-}
 
-#nav-list a:hover {
-  color: rgb(134, 0, 0);
+
+.nav-list a:hover {
+  color: var(--main-highlight-color);
 }
 
 .subsect {
   height: 100vh;
   width: 100vw;
   --background-color: #17234f;
+}
+
+.burger {
+  display: none;
+}
+.burger div {
+  width: 25px;
+  height: 3px;
+  background-color: rgb(156, 156, 156);
+  margin: 5px;
+}
+
+.nav-list-mobile{
+  display:none;
+}
+
+@media only screen and (max-width: 1667px) {
+  .nav-list a {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  [id^="nav-item"] {
+    display: none;
+  }
+  .burger{
+    display:block;
+    cursor: pointer;
+  }
+
+  .nav-list-mobile{
+    display: flex;
+    position:fixed;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    right:0px;
+    height:92vh;
+    width:70vw;
+    background-color: aquamarine;
+    transform: translateX(100%);
+    color:white;
+    transition: 0.5s ease-in;
+  }
+
+}
+
+.nav-active{
+  transform:translateX(0%);
+}
+
+@media screen and (max-width:938px){
+  #logo{
+    grid-column: 1/3;
+  }
+}
+@media screen and (max-width:522px){
+  #logo{
+    grid-column: 1/4;
+  }
+  #logo a{
+    font-size: 15px;
+  }
 }
 
 @media only screen and (max-width: 888px) {
