--- a/styles/intro.css
+++ b/styles/intro.css
@@ -8,7 +8,9 @@
 }
 #intro-2{
     font-size:60px;
-    color:var(--main-highlight-color);
+    /* color:var(--main-highlight-color); */
+    border-radius: 90%;
+    
 }
 #introduction{
     display:flex;
@@ -61,4 +63,43 @@
     .text-intro{
         width:80vw;
     }
+  }
+
+  @media only screen and (max-width:522px){
+      #avatar{
+          width:35vh;
+          height:35vh;
+      }
+  }
+
+  .typing{
+      /* position:relative; */
+      margin:10px 0 10px 0;
+      background-color: rgb(0, 0, 0);
+      width:395px;
+      padding:7px;
+      border-radius: 10px;
+      
+  }
+
+  .typing::after{
+    z-index: 7;
+      
+      margin-left:5px;
+      content:"";
+      /* position: absolute; */
+      width: 1px;
+      height:90%;
+      border-right:2px solid rgb(126, 126, 126);
+      animation:blink 1s infinite ease;
+  }
+
+  @keyframes blink {
+      0%{
+          opacity: 0;
+      }
+
+      100%{
+          opacity: 1;
+      }
   }
