--- a/styles/projects.css
+++ b/styles/projects.css
@@ -77,8 +77,22 @@
         text-align: center;
     }
 
-    .project-technologies,.project-links{
+    .project-links{
         justify-content: center;
+    }
+    .project-technologies{
+        text-align: center;
+        display:grid;
+        grid-template-columns: repeat(auto-fit, minmax(140px,0.2fr));
+        justify-content: center;
+    }
+    .project-tech-link{
+        margin:0 0 15px 0;
+    }
+
+    .project-icons{
+        margin-top:15px;
+        width:25px;
     }
 }
 
