--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,10 @@ body::-webkit-scrollbar-thumb {
   background: rgb(119, 119, 119);
 }
 
+#introduction{
+  background-color: #ffffff;
+}
+
 #navbar {
   width: 100vw;
   height: 50px;
@@ -46,7 +50,7 @@ body::-webkit-scrollbar-thumb {
 
 .nav-list {
   display: grid;
-  grid-template-columns: repeat(11, 1fr);
+  grid-template-columns: repeat(13, 1fr);
   grid-template-rows: 50px;
   grid-template-areas: "navLogo  navTitle navItem1 navItem2 navItem3 navItem4";
   justify-items: center;
@@ -54,7 +58,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .nav-list a {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .default-font {
@@ -63,7 +67,8 @@ body::-webkit-scrollbar-thumb {
 
 .enlarged-font {
   font-size: 60px;
-  color: var(--main-highlight-color);
+  /* color: var(--main-highlight-color); */
+  color:white;
 }
 
 #logo {
@@ -82,7 +87,7 @@ body::-webkit-scrollbar-thumb {
 
 .burger {
   display: none;
-  grid-column: 11/12;
+  grid-column: 13/14;
 }
 .burger div {
   width: 25px;
@@ -98,6 +103,11 @@ body::-webkit-scrollbar-thumb {
 @media only screen and (max-width: 1667px) {
   .nav-list a {
     font-size: 20px;
+  }
+}
+@media only screen and (max-width: 1314px) {
+  .nav-list a {
+    font-size: 15px;
   }
 }
 
@@ -117,18 +127,21 @@ body::-webkit-scrollbar-thumb {
     align-items: center;
     justify-content: space-around;
     right: 0px;
-    height: 92vh;
+    height: 72vh;
     width: 70vw;
     background-color: aquamarine;
     transform: translateX(100%);
     color: white;
     transition: 0.5s ease-in;
+    z-index: 90;
   }
 
-  .enlarged-font{
-    font-size:50px;
+  .enlarged-font {
+    font-size: 50px;
   }
 }
+
+
 
 .nav-active {
   transform: translateX(0%);
@@ -136,7 +149,7 @@ body::-webkit-scrollbar-thumb {
 
 @media screen and (max-width: 938px) {
   #logo {
-    grid-column: 1/3;
+    grid-column: 1/2;
   }
 }
 
@@ -145,19 +158,26 @@ body::-webkit-scrollbar-thumb {
     font-size: 10px;
   }
 
-  .default-font{
-    font-size: 15px;
+  
+}
+
+@media screen and (max-width:682px){
+  .default-font {
+    font-size: 17px;
+  }
+  #logo {
+    grid-column: 1/3;
   }
 }
 @media screen and (max-width: 522px) {
-  #logo {
-    grid-column: 1/4;
-  }
+
   #logo a {
     font-size: 15px;
   }
-
-  .burger{
-    grid-column: 10/12;
+  .enlarged-font {
+    font-size: 35px;
+  }
+  .burger {
+    grid-column: 12/14;
   }
 }
