--- a/styles/skills.css
+++ b/styles/skills.css
@@ -19,10 +19,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-#skills{
     text-align: center;
+    margin-bottom:40px;
 }
+
 #skills-header{
     margin-bottom:50px;
 }
