burger animation & maxheight adjustment

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,41 +1,46 @@
-#about-me{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height:30vh;
+#about-me {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 30vh;
 }
 
-#about-text{
-    width:55vw;
-    text-align: center;
+#about-text {
+  width: 55vw;
+  text-align: center;
 }
 
-#about-header{
-    margin-bottom:30px;
+#about-header {
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1400px) {
+  #about-me {
+    max-height: 300px;
+  }
 }
 
 @media screen and (max-width: 1400px) {
-    #about-text{
-        width:80vw;
-    }
+  #about-text {
+    width: 80vw;
   }
-
-  @media screen and (max-width:1000px){
-    #about-me{
-        height:50vh;
-    }
 }
 
-  @media screen and (max-width: 720px) {
-    #about-text{
-        width:90vw;
-    }
-   
+@media screen and (max-width: 1000px) {
+  #about-me {
+    height: 50vh;
   }
+}
 
-  @media screen and (max-height:790px), screen and (max-width:400px){
-    #about-me{
-        height:100vh;
-    }
+@media screen and (max-width: 720px) {
+  #about-text {
+    width: 90vw;
+  }
+}
+
+@media screen and (max-height: 790px), screen and (max-width: 400px) {
+  #about-me {
+    height: 100vh;
+  }
 }
