--- a/styles/skills.css
+++ b/styles/skills.css
@@ -31,6 +31,12 @@
     width:80px;
 }
 
+@media screen and (min-width: 1400px){
+    #skills{
+        max-height:300px;
+    }
+}
+
 @media screen and (max-width: 1400px) {
     .skills-content{
         width:80vw;
