--- a/styles/intro.css
+++ b/styles/intro.css
@@ -29,22 +29,23 @@
     /* position:relative; */
     margin:10px 0 10px 0;
     background-color: rgb(0, 0, 0);
-    width:395px;
+    width:84%;
     padding:7px;
     border-radius: 10px;
+    z-index: 0;
     
 }
 
 .typing::after{
-  z-index: 7;
+  
     
     margin-left:5px;
     content:"";
     /* position: absolute; */
     width: 1px;
-    height:90%;
+    height:100px;
     border-right:2px solid rgb(126, 126, 126);
-    animation:blink 1s infinite ease;
+    animation:blink 1s infinite ease-out;
 }
 
 
