updated profile pic

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,15 +33,15 @@ body::-webkit-scrollbar-thumb {
   background: rgb(119, 119, 119);
 }
 
-#introduction{
-  background-color: #ffffff;
-}
+
 
 #navbar {
   width: 100vw;
   height: 50px;
-  background: rgb(255, 255, 255);
+  background-color: white;
   position: fixed;
+  z-index: 99;
+  
 }
 
 #logo {
@@ -200,15 +200,16 @@ body::-webkit-scrollbar-thumb {
   #logo {
     grid-column: 1/3;
   }
+  .enlarged-font {
+    font-size: 35px;
+  }
 }
 @media screen and (max-width: 522px) {
 
   #logo a {
     font-size: 15px;
   }
-  .enlarged-font {
-    font-size: 35px;
-  }
+  
   .burger {
     grid-column: 12/14;
   }
