--- a/styles/contact.css
+++ b/styles/contact.css
@@ -5,6 +5,7 @@
     align-items: center;
     height:15vh;
     background-color: #222222;
+    /* background-color: #314455; */
 }
 
 .contact-1:hover{
@@ -13,7 +14,7 @@
 }
 .contact-links{
     display:grid;
-    grid-template-columns: 20vw 20vw 20vw;
+    grid-template-columns: repeat(3, minmax(90px,10vw) );
     justify-items: center;
     align-items: center;
 }
@@ -32,6 +33,17 @@
 .contact-icons:hover{
     fill:white;
 }
+
+/* .fa::before{
+    content:"\f1f9"
+} */
+
+#outro{
+    margin-top:15px;
+    font-size: 12px;
+    color:rgb(156, 156, 156);
+}
+
 
 @media only screen and (max-height:670px){
     .contact-icons{
