--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,11 +1,37 @@
+#introduction{
+   /* display:flex;
+   justify-content: flex-end;
+   align-items: center; */
+   background-color: var(--alt2-color);
+   position:relative;
+   margin-bottom:60px;
+   display:flex;
+   flex-direction: column-reverse;
+   align-items: center;
+   justify-content: center;
+}
 
 
-#avatar{
+.avatar{
     border-radius: 1000px;
     width:55vh;
     height:55vh;
     object-fit: cover;
+    /* position:absolute;
+    right:22%;
+    bottom:25%; */
     
+}
+
+#ava1{
+    z-index:26;
+    border: 10px solid white;
+}
+
+#ava2{
+    background-color: var(--alt-color);
+    transform:translate(5%,90%);
+    z-index:25;
 }
 #intro-2{
     font-size:60px;
@@ -14,15 +40,12 @@
     
     
 }
-#introduction{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
 .text-intro{
-    margin-bottom:60px;
+    
     width:500px;
-    align-self: flex-end;
+    margin-bottom:20px;
+    align-items: flex-end;
+    
 }
 
 .typing{
@@ -34,6 +57,7 @@
     border-radius: 10px;
     z-index: 0;
     
+    
 }
 
 .typing::after{
@@ -44,7 +68,7 @@
     /* position: absolute; */
     width: 1px;
     height:100px;
-    border-right:2px solid rgb(126, 126, 126);
+    border-right:2px solid rgb(255, 255, 255);
     animation:blink 1s infinite ease-out;
 }
 
@@ -56,7 +80,7 @@
         flex-direction: column-reverse;
     }
 
-    #avatar{
+    .avatar{
         margin:0;
         margin-bottom: 40px;
         width:40vh;
@@ -92,6 +116,14 @@
     }
     .text-intro{
         width:80vw;
+        text-align: center;
+    }
+    .typing{
+        width:50vw;
+        min-width: 250px;
+        white-space:nowrap;
+        margin-left:auto;
+        margin-right:auto;
     }
   }
 
@@ -102,7 +134,7 @@
       }
   }
 
-  @media only screen and (max-width:380px){
+  @media only screen and (max-width:486px){
       .typing{
           width:100%
       }
@@ -115,6 +147,12 @@
   @media only screen and (max-height:770px){
       #avatar{
           margin:25px;
+      }
+  }
+
+  @media only screen and (max-height:538px){
+      .text-intro{
+          text-align: center;
       }
   }
 
