--- a/styles/skills.css
+++ b/styles/skills.css
@@ -5,9 +5,10 @@
 
 .skill-list {
     display:grid;
-     grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); 
+     grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); 
     align-items: center;
     justify-items: center;
+    row-gap: 20px;
 
 }
 
@@ -21,6 +22,7 @@
     align-items: center;
     text-align: center;
     margin-bottom:40px;
+
 }
 
 #skills-header{
